--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "clickpdx/ocdla",
+    "name": "ocdladefense/wp-theme-ocdla",
     "description": "A WordPress child theme that uses Wireframe as a parent",
     "type": "wordpress-theme",
     "authors": [
